--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ Flask-WTF==1.1.1
 SQLAlchemy==2.0.4
 SQLAlchemy-serializer==1.4.1
 Werkzeug==2.2.2
-telegram==0.0.1
+python-telegram-bot==20.2
 requests==2.28.2
